# $Id$

2006-09-25	Konstantin V. Arkhipov

	* core/OSQL/TruncateQuery.class.php,
	test/core/TruncateQueryTest.class.php: single table handling fixed,
	test updated.

	* meta/classes/MetaClass.class.php: try to resolve parent's identifier
	in cases where child doesn't own one.

2006-09-24	Konstantin V. Arkhipov

	* main/DAOs/FullTextDAO.class.php: is now interface-helper for
	introduced FullTextUtils.

	* main/DAOs/MappedDAO.class.php,
	main/DAOs/MappedStorableDAO.class.php: dropped, since all Storable's
	childs are now Mapped too.

	* main/Base/Credentials.class.php: dropped.

	* FinalNamedObjectDAO.class.php, NamedObjectDAO.class.php: useless
	classes dropped.

	* main/DAOs/FinalObjectsTreeDAO.class.php,
	main/DAOs/ObjectsTreeDAO.class.php, main/Base/ObjectsTree.class.php:
	deprecated classes dropped.

2006-09-22	Konstantin V. Arkhipov

	* ext/src/main/DAOs/Handlers/SharedMemorySegmentHandler.c: dropped.

	* main/DAOs/FullTextDAO.class.php: deprecated.

	* core/Cache/ReferencePool.class.php,
	core/Cache/WatermarkedPeer.class.php: simplified a bit.

2006-09-21	Konstantin V. Arkhipov

	* main/DAOs/Handlers/XCacheSegmentHandler.class.php: one more
	segment handler added.

2006-09-20	Denis M. Gabaidulin

	* core/Base/Session.class.php: dropAll() method was added.

2006-09-19	Konstantin V. Arkhipov

	* main/Base/ObjectsTree.class.php, main/DAOs/ObjectsTreeDAO.class.php,
	main/DAOs/FinalObjectsTreeDAO.class.php: are now deprecated, pending
	removal during upcoming 0.7-session.

	* meta/builders/DictionaryDaoBuilder.class.php: now detects whether
	FinalNamedObjectDAO can be used.

2006-09-18	Konstantin V. Arkhipov

	* meta/classes/MetaConfiguration.class.php: name in identifier's
	shortcut is now optional, the default is 'id'; identifier's type can
	be specified now, the default is 'BigInteger'.

2006-09-17	Konstantin V. Arkhipov

	* 0.6.2 released.

2006-09-14	Konstantin V. Arkhipov

	* core/OSQL/SelectQuery.class.php: arrayGet() now detects two