@@ -2,6 +2,9 @@
 
 2006-09-25	Konstantin V. Arkhipov
 
+	* meta/builders/ProtoClassBuilder.class.php: inheritance support
+	implemented, useless constructor and private property dropped.
+
 	* core/OSQL/TruncateQuery.class.php,
 	test/core/TruncateQueryTest.class.php: single table handling fixed,
 	test updated.
